devops/k3s/manifests/ingresses/prometheus-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: prometheus-auth
  namespace: monitoring
spec:
  basicAuth:
    secret: prometheus-auth
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.poddle.uz`)
      kind: Rule
      services:
        - name: prometheus-kube-prometheus-prometheus
          port: 9090
      # middlewares:
      #   - name: prometheus-auth
  tls:
    secretName: wildcard-poddle-uz-tls
---
# apiVersion: traefik.containo.us/v1alpha1
# kind: Middleware
# metadata:
#   name: prometheus-auth
#   namespace: monitoring
# spec:
#   basicAuth:
#     secret: prometheus-auth
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: prometheus
#   namespace: monitoring
#   annotations:
#     # cert-manager.io/cluster-issuer: "vault-k8s-ci"
#     traefik.ingress.kubernetes.io/router.entrypoints: websecure
#     traefik.ingress.kubernetes.io/router.tls: "true"
#     traefik.ingress.kubernetes.io/router.middlewares: monitoring-prometheus-auth@kubernetescrd
# spec:
#   ingressClassName: traefik
#   tls:
#     - hosts:
#         - prometheus.poddle.uz
#       # secretName: prometheus-tls
#       secretName: wildcard-poddle-uz-tls
#   rules:
#     - host: prometheus.poddle.uz
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: prometheus-kube-prometheus-prometheus
#                 port:
#                   number: 9090
